[package]
name = "try_collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory_debug_tools = { git = "https://github.com/Gorzorg/memory_debug_tools.git" }

[features]
default = ["force_collect"]
force_collect = []